--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<form action="#" method="get">
 		<input type="text" name="firstName" id="firstName">
 		<input type="text" name="lastName" id="lastName">
+		<input type="number" name="ae" id="age">
 		<input type="button" value="Evniar">
 	</form>
 </body>
