--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<input type="number" name="ae" id="age">
 		<input type="date" name="birthdate" id="birthdate">
 		<img src="#" alt="Test Img">
-		<video src="cat.mp4"></video>
+		<video src="video/cat.mp4"></video>
 		<input type="button" value="Evniar">
 	</form>
 </body>
